My_hw_practic_5

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         </div>
         <div class="promo__adv">
             <div class="promo__adv-title">Реклама от спонсоров</div>
-            <img src="img/content_1.jpg" alt="some picture">
-            <img src="img/content_2.jpg" alt="some picture">
-            <img src="img/content_3.png" alt="some picture">
+            <img class="advertising" src="img/content_1.jpg" alt="some picture">
+            <img class="advertising" src="img/content_2.jpg" alt="some picture">
+            <img class="advertising" src="img/content_3.png" alt="some picture">
         </div>
     </main>
 
