Add many functions

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Movie DB</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/delete.css">
 </head>
 <body>
     <header class="header">
@@ -67,7 +68,7 @@
                         <span>Введите название фильма</span>
                         <input class="adding__input" type="text" placeholder="Что уже посмотрено...?">
                         <span>Сделать его любимым?</span>
-                        <input type="checkbox">
+                        <input data-checkbox type="checkbox">
                         <span class="yes">Да!</span>
                         <button>Подтвердить</button>
                     </form>
